Camera2: import quickReader module from Snap
Extra edits: fix intent handling on android 11+,
apps can no longer query the package manager freely,
instead the ActivityNotFoundException is used

Signed-off-by: Joey <joey@lineageos.org>
Change-Id: I3c9200dd1f770cea3fec35c211a704969a046cee

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -163,6 +163,11 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-    </application>
 
+        <activity
+            android:name="org.lineageos.quickreader.ScannerActivity"
+            android:label="@string/quick_reader_name"
+            android:theme="@style/ScannerTheme"
+            android:exported="true" />
+    </application>
 </manifest>
